<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.MainActivity">

    <item
        android:id="@+id/action_undo"
        android:title="@string/undo"
        android:icon="@drawable/ic_action_undo"
        app:showAsAction="ifRoom|withText"
        android:onClick="undoLastMove"
        />
    <item
        android:id="@+id/action_new_game"
        android:title="@string/new_game"
        android:icon="@drawable/ic_action_new_game"
        app:showAsAction="ifRoom|withText"
        android:onClick="startNewGame"
        />
    <item
        android:id="@+id/action_toggle_auto_save"
        android:title="@string/title_use_auto_save"
        android:checkable="true"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_turn_show_error_messages"
        android:title="@string/title_show_turn_specific_error_messages"
        android:checkable="true"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_about"
        android:title="@string/about"
        android:icon="@android:drawable/ic_dialog_info"
        app:showAsAction="never"
        />
</menu>
